--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,49 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>customers-viewer Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+  	<maven.compiler.source>1.11</maven.compiler.source>
+    <springframework.version>5.1.3.RELEASE</springframework.version>
+  </properties>
+  
   <dependencies>
+    <!-- Spring MVC -->
+    <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-core</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+	<dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-web</artifactId>
+      <version>${springframework.version}</version>
+	</dependency>
+	<dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-webmvc</artifactId>
+      <version>${springframework.version}</version>
+	</dependency>
+	
+	<!-- Servlet API-->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+    
+    
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -15,7 +57,19 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
   <build>
     <finalName>cviewer</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.0</version>
+        <configuration>
+          <release>11</release>
+        </configuration>
+      </plugin>      
+    </plugins>
   </build>
+  
 </project>
