--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,32 @@
       <version>${springframework.version}</version>
 	</dependency>
 	
+	<dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-orm</artifactId>
+	  <version>${springframework.version}</version>
+	</dependency>
+	<dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    
+    
+    <!-- Hibernate -->
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-entitymanager</artifactId>
+      <version>5.3.6.Final</version>
+    </dependency>
+    
+    <!-- Embaded DB -->
+    <dependency>			
+	  <groupId>com.h2database</groupId>
+	  <artifactId>h2</artifactId>
+	  <version>1.3.160</version>
+	</dependency>
+	
 	<!-- Servlet API-->
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -48,6 +74,11 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.1</version>
+	</dependency>
     
     
     <dependency>
@@ -69,6 +100,11 @@
           <release>11</release>
         </configuration>
       </plugin>      
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.2.0</version>
+        </plugin>
     </plugins>
   </build>
   
