--- a/pom.xml
+++ b/pom.xml
@@ -14,23 +14,12 @@
   </properties>
   
   <dependencies>
-    <!-- Spring MVC -->
+    <!-- Spring -->
     <dependency>
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-core</artifactId>
-      <version>${springframework.version}</version>
-    </dependency>
-	<dependency>
-	  <groupId>org.springframework</groupId>
-	  <artifactId>spring-web</artifactId>
-      <version>${springframework.version}</version>
-	</dependency>
-	<dependency>
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-webmvc</artifactId>
       <version>${springframework.version}</version>
-	</dependency>
-	
+	</dependency>	
 	<dependency>
 	  <groupId>org.springframework</groupId>
 	  <artifactId>spring-orm</artifactId>
@@ -41,8 +30,37 @@
       <artifactId>spring-tx</artifactId>
       <version>${springframework.version}</version>
     </dependency>
-    
-    
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+	<dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-taglibs</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-oauth2-client</artifactId>      
+      <version>${springframework.version}</version>
+	</dependency>
+	<dependency>
+   	  <groupId>org.springframework.security</groupId>
+   	  <artifactId>spring-security-oauth2-jose</artifactId>
+      <version>${springframework.version}</version>
+	</dependency>
+        
     <!-- Hibernate -->
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -57,30 +75,31 @@
 	  <version>1.3.160</version>
 	</dependency>
 	
-	<!-- Servlet API-->
-    <dependency>
+	<!-- Servlet API and JSP-->
+	<dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <version>4.0.0</version>
+      <version>4.0.1</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency>    
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>javax.servlet.jsp-api</artifactId>
       <version>2.3.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.servlet</groupId>
+      <groupId>jstl</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
-      <version>2.1</version>
-	</dependency>
+      <version>2.3.0</version>
+    </dependency>
     
-    
+    <!-- Tests -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -97,7 +116,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <release>11</release>
+          <release>11</release> 
         </configuration>
       </plugin>      
         <plugin>
